qt/webengine/gen_qwebengineurlrequestjob.h

class QIODevice;
class QMetaObject;
class QUrl;
class QWebEngineUrlRequestJob;
typedef struct QIODevice QIODevice;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
typedef struct QWebEngineUrlRequestJob QWebEngineUrlRequestJob;
QMetaObject* QWebEngineUrlRequestJob_metaObject(const QWebEngineUrlRequestJob* self);
void* QWebEngineUrlRequestJob_metacast(QWebEngineUrlRequestJob* self, const char* param1);
int QWebEngineUrlRequestJob_metacall(QWebEngineUrlRequestJob* self, int param1, int param2, void** param3);
struct miqt_string QWebEngineUrlRequestJob_tr(const char* s);
struct miqt_string QWebEngineUrlRequestJob_trUtf8(const char* s);
QUrl* QWebEngineUrlRequestJob_requestUrl(const QWebEngineUrlRequestJob* self);
struct miqt_string QWebEngineUrlRequestJob_requestMethod(const QWebEngineUrlRequestJob* self);
QUrl* QWebEngineUrlRequestJob_initiator(const QWebEngineUrlRequestJob* self);
void QWebEngineUrlRequestJob_reply(QWebEngineUrlRequestJob* self, struct miqt_string contentType, QIODevice* device);
void QWebEngineUrlRequestJob_fail(QWebEngineUrlRequestJob* self, int error);
void QWebEngineUrlRequestJob_redirect(QWebEngineUrlRequestJob* self, QUrl* url);
struct miqt_string QWebEngineUrlRequestJob_tr2(const char* s, const char* c);
struct miqt_string QWebEngineUrlRequestJob_tr3(const char* s, const char* c, int n);
struct miqt_string QWebEngineUrlRequestJob_trUtf82(const char* s, const char* c);
struct miqt_string QWebEngineUrlRequestJob_trUtf83(const char* s, const char* c, int n);
void QWebEngineUrlRequestJob_delete(QWebEngineUrlRequestJob* self);